@@ -10,6 +10,13 @@ logger = logging.getLogger('PloneMeeting')
 # The migration class ----------------------------------------------------------
 class Migrate_To_4_1(Migrator):
 
+    def _addItemTemplatesManagersGroup(self):
+        """Add the '_itemtemplatesmanagers' group for every MeetingConfig."""
+        logger.info("Adding 'itemtemplatesmanagers' group for every MeetingConfigs...")
+        for cfg in self.tool.objectValues('MeetingConfig'):
+            cfg.createItemTemplateManagersGroup()
+        logger.info('Done.')
+
     def run(self, step=None):
         logger.info('Migrating to PloneMeeting 4.1...')
         self.reinstall(profiles=['profile-Products.PloneMeeting:default', ],
@@ -19,6 +26,9 @@ class Migrate_To_4_1(Migrator):
             self.reinstall(profiles=[self.profile_name, ],
                            ignore_dependencies=False,
                            dependency_strategy=DEPENDENCY_STRATEGY_NEW)
+
+        # migration steps
+        self._addItemTemplatesManagersGroup()
 
         # update portal_catalog, index linkedMeetingUID must be updated
         self.refreshDatabase(catalogsToRebuild=['portal_catalog'],
@@ -31,7 +41,8 @@ def migrate(context):
 
        1) Reinstall PloneMeeting and upgrade dependencies;
        2) Reinstall plugin if not PloneMeeting;
-       3) Refresh catalogs.
+       3) Add '_itemtemplatesmanagers' groups;
+       4) Refresh portal_catalog.
     '''
     migrator = Migrate_To_4_1(context)
     migrator.run()
